--- a/package.json
+++ b/package.json
@@ -14,13 +14,14 @@
     "expo-av": "^9.0.0",
     "expo-linear-gradient": "~8.4.0",
     "expo-status-bar": "~1.0.3",
+    "firebase": "^8.3.1",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-is": "^16.8.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
     "react-native-gesture-handler": "~1.8.0",
     "react-native-paper": "^3.6.0",
-    "react-native-reanimated": "~1.13.0",
+    "react-native-reanimated": "^2.0.0",
     "react-native-safe-area-context": "3.1.9",
     "react-native-screens": "~2.15.2",
     "react-native-web": "^0.15.0",
